# pluribus

./: .gitignore  .golangci.yml  BUILD.md  CONTRIBUTING.md  INSTALL.md  LICENSE.md  Makefile  README.md  docker-compose.install.yml  docker-compose.pg-textsearch.yml  docker-compose.regression.yml  docker-compose.yml  pluribus.install.env.example
artifacts/: eval-report.json  eval-report.txt  stress-report.json  stress-report.txt
control-plane/: CHANGELOG.md  Dockerfile  Dockerfile.regression  Makefile  README.md  go.mod  go.sum
docs/: README.md  ai-recall-cursor-focus.md  anti-regression.md  api-contract.md  architecture.md  authentication.md  constitution-format.md  control-plane-design-and-starter.md  curation-loop.md  cursor-verify-recall.md  decision-entry-format.md  deployment-poc.md  episodic-similarity.md  evaluation.md  evidence-in-recall.md  get-started.md  http-api-index.md  mcp-discipline-doctrine.md  mcp-migration-stdio-to-http.md  mcp-poc-contract.md  mcp-prompt-resource-audit.md  mcp-prompt-resource-proof.md  mcp-prompt-resource-versioning.md  mcp-service-first.md  mcp-usage.md  memory-curation.md  memory-doctrine.md  pluribus-benefit-eval.md  pluribus-container-install.md  pluribus-image-release-policy.md  pluribus-lsp-mcp-boundary.md  pluribus-memory-first-ontology.md  pluribus-operational-guide.md  pluribus-post-release-roadmap.md  pluribus-proof-index.md  pluribus-public-architecture.md  pluribus-quickstart.md  pluribus-release-readiness.md  (+9 more)
sdk/python/: README.md  pyproject.toml
sdk/python/pluribus/: __init__.py  client.py  exceptions.py
(+652 files in other folders)
